--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,22 +22,26 @@ body {
   color:#000;
 }
 
+.wrapper {
+  width: 1200px;
+  height: auto;
+  background-color: #fff;
+}
+
 .button {
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   font-weight: 700;
   text-decoration: none;
+  border: none;
   text-align: center;
   color: rgba(255, 255, 255, 1);
   background-color: #756157;
+  cursor: pointer;
 }
 
 /*header*/
-.page-header {
-  background-color: #fff;
-}
-
 .navigation {
   font-weight: 700;
 }
@@ -48,27 +52,26 @@ body {
 }
 
 /*index*/
+
+.main-index {
+  text-align: center;
+}
 .welcome {
-  width: 1200px;
   height: 458px;
   background-image: url(../images/welcome-background.jpg);
   background-repeat: no-repeat;
-  background-color: #D5D5FF;
+  background-color: #9ba4e5;
   background-size: 100% auto;
 }
 
-.slogan {
-  background-color: #fff;
-}
-
-.slogan-title {
+.advantages-promo {
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
   text-transform: uppercase;
 }
 
-.slogan-subtitle {
+.advantages-subtitle {
   font-size: 22px;
   font-weight: 400;
   line-height: 26px;
@@ -102,10 +105,6 @@ body {
    background-color: rgba(131, 179, 211, 0.2);
  }
 
- .offer {
-   background-color: #fff;
- }
-
  .offer-title {
    font-size: 30px;
    font-weight: 700;
@@ -119,12 +118,17 @@ body {
    line-height: 26px;
  }
 
+ .button-offer {
+   font-size: 20px;
+   line-height: 36px;
+ }
+
  .subscribe {
-   width: 1200px;
    height: 411px;
    background-image: url("../images/subscribe-background.jpg");
    background-repeat: no-repeat;
-   background-size: 100% auto;
+   background-size: cover;
+   background-color: #85aaba;
    color: rgba(255, 255, 255, 1);
  }
 
@@ -135,15 +139,75 @@ body {
    text-transform: uppercase;
  }
 
-/*footer*/
-.page-footer {
-  background-color: #fff;
-}
+ .button-subscribe {
+   font-size: 20px;
+   line-height: 36px;
+   background-color: #82B3D3;
+ }
 
+/*footer*/
 .footer-phone-number {
   font-size: 40px;
   line-height: 40px;
   font-weight: 400;
+  font-style: normal;
+}
+
+.phone-number-link {
   text-decoration: none;
   color: #000;
+}
+
+/*catalog*/
+.catalog-header {
+  background-image: url(../images/catalog-background.jpg);
+  background-repeat: no-repeat;
+  background-color: #396487;
+  background-size: cover;
+  color: #fff;
+}
+
+.catalog-title {
+  font-size: 60px;
+  line-height: 78px;
+  font-weight: 700;
+}
+
+.breadcrumbs-link {
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 400;
+  text-decoration: none;
+  color: inherit;
+}
+
+.button-apply-filters {
+  background-color: #82B3D3;
+}
+
+.button-reset-filters {
+  background-color: transparent;
+  text-transform: capitalize;
+  font-weight: 400;
+}
+
+.button-add-favorite {
+  background-color: #82B3D3;
+}
+
+.button-in-favorite {
+  background-color: #7DB54F;
+}
+
+.catalog-subscribe {
+  background-image: none;
+  background-color: inherit;
+  color: #000;
+}
+
+.search-results-title {
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
 }
