--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,18 +14,26 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   background-color: #E5E5E5;
   color:#000;
+  height: 100%;
 }
 
 .wrapper {
   width: 1200px;
-  height: auto;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
   background-color: #fff;
+  min-height: 100%;
 }
 
 .button {
@@ -54,6 +62,7 @@ body {
 /*index*/
 
 .main-index {
+  flex: 1 1 100%;
   text-align: center;
 }
 .welcome {
