--- a/styles/styles.css
+++ b/styles/styles.css
@@ -176,6 +176,8 @@ body {
  }
 
  .offer-title {
+   margin: 0;
+   padding: 0;
    font-size: 30px;
    font-weight: 700;
    line-height: 36px;
@@ -183,6 +185,9 @@ body {
  }
 
  .offer-description {
+   display: block;
+   width: 592px;
+   margin: 0 auto;
    font-size: 22px;
    font-weight: 400;
    line-height: 26px;
@@ -203,10 +208,17 @@ body {
  }
 
  .subscribe-title {
+   margin: 0;
+   padding: 0;
    font-size: 30px;
    font-weight: 700;
    line-height: 36px;
    text-transform: uppercase;
+ }
+
+ .subscribe-description {
+   display: inline-block;
+   width: 446px;
  }
 
  .button-subscribe {
