--- a/styles/styles.css
+++ b/styles/styles.css
@@ -264,9 +264,18 @@ body {
 }
 
 .catalog-title {
+  margin: 0 0 0 70px;
+  padding: 0;
   font-size: 60px;
   line-height: 78px;
   font-weight: 700;
+}
+
+.breadcrumbs {
+  margin: 0 0 0 70px;
+  padding: 0;
+  list-style: none;
+
 }
 
 .breadcrumbs-link {
@@ -275,6 +284,36 @@ body {
   font-weight: 400;
   text-decoration: none;
   color: inherit;
+}
+
+.catalog-filters-form {
+  display: flex;
+  width: 1060px;
+  margin: 0 70px;
+}
+
+.catalog-filter-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.catalog-filters-group-infrastructure {
+  width: 151px;
+  margin: 0 70px 0 0;
+}
+
+.catalog-filters-group-type {
+  width: 146px;
+}
+
+.catalog-filters-group-price {
+  width: 288px;
+  margin: 0 70px 0 auto;
+}
+
+.form-buttons {
+  width: 160px;
 }
 
 .button-apply-filters {
@@ -287,6 +326,46 @@ body {
   font-weight: 400;
 }
 
+.catalog-sort {
+  display: flex;
+  width: 1057px;
+  margin: 0 71px 0 72px;
+}
+
+.catalog-sort-select {
+  width: 287px;
+  margin:0 81px 0 191px;
+}
+
+.catalog-sort-view-buttons {
+  display: flex;
+}
+
+.view-icon {
+  padding: 17px 16px;
+}
+
+.view-button:not(:last-child) {
+  margin-right: 8px;
+}
+
+.catalog-hotels-list {
+  margin: 0 71px 0 73px;
+  padding: 0;
+  width: 1056px;
+}
+
+.catalog-page-controls-container {
+  display: flex;
+  width: 1056px;
+  margin: 0 71px 0 73px;
+  justify-content: space-between;
+}
+
+.catalog-pagination {
+  margin: 0;
+  padding: 0;
+}
 .button-add-favorite {
   background-color: #82B3D3;
 }
@@ -296,6 +375,7 @@ body {
 }
 
 .catalog-subscribe {
+  text-align: center;
   background-image: none;
   background-color: inherit;
   color: #000;
