--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,17 @@
   box-sizing: border-box;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 img {
   max-width: 100%;
   object-fit: contain;
@@ -50,6 +61,10 @@ body {
 }
 
 .button {
+  display: block;
+  min-width: 140px;
+  max-width: 574px;
+  padding: 9px 0;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -74,22 +89,51 @@ body {
   display: flex;
   width: 100%;
   font-weight: 700;
+  margin-left: 30px;
 }
 
 .navigation-list {
-  margin: 0 0 0 30px;
+  margin: 0;
   padding: 0;
-  width: 450px;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 450px;
 }
 
 .navigation-user {
-  width: 300px;
+  max-width: 350px;
   margin-left: auto;
 }
 
 .navigation-link {
+  display: block;
+  padding: 20px 17px;
   color: inherit;
   text-decoration: none;
+  font-size: 20px;
+  line-height: 26px;
+}
+
+.navigation-user .navigation-link {
+  min-width: 19px;
+  min-height: 19px;
+  padding: 22px 12px;
+}
+
+.search-link:before {
+  content: url("../images/icons/search-icon.svg");
+}
+
+.favorite-link:before {
+  content: url("../images/icons/favorite-icon.svg");
+}
+
+.navigation-user .button {
+  min-width: 160px;
+  margin-top: 14px;
+  margin-bottom: 14px;
+  margin-left: 20px;
 }
 
 /*index*/
