--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,7 +89,7 @@ body {
   display: flex;
   width: 100%;
   font-weight: 700;
-  margin-left: 30px;
+  margin-left: 47px;
 }
 
 .navigation-list {
@@ -106,9 +106,13 @@ body {
   margin-left: auto;
 }
 
+.navigation-list .navigation-item:not(:last-child) {
+  margin-right: 34px;
+}
+
 .navigation-link {
   display: block;
-  padding: 20px 17px;
+  padding: 20px 0;
   color: inherit;
   text-decoration: none;
   font-size: 20px;
@@ -353,14 +357,39 @@ body {
 .page-footer {
   display: flex;
   justify-content: space-between;
-  padding: 0 70px;
+  padding: 40px 70px 30px;
 }
 
 .footer-contacts-list {
-  padding: 0;
+  padding: 5px 0;
   margin: 0;
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-contacts-item {
+  display: flex;
+  width: 47px;
+  height: 40px;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-contacts-vk-link {
+  padding: 13px 11px;
+}
+
+.footer-contacts-telegram-link {
+  padding: 12px 14px;
+}
+
+.footer-contacts-youtube-link {
+  padding: 11px 12px;
+}
+
+.footer-contact-icon {
+  display: block;
 }
 
 .footer-phone-number {
@@ -371,8 +400,19 @@ body {
 }
 
 .phone-number-link {
+  display: block;
+  padding: 5px 0;
   text-decoration: none;
   color: #000;
+}
+
+.footer-html-academy-link {
+  display: block;
+  padding: 8px 0;
+}
+
+.footer-html-academy-image {
+  display: block;
 }
 
 /*catalog*/
