--- a/styles/styles.css
+++ b/styles/styles.css
@@ -593,7 +593,7 @@ body {
 }
 
 .button-view {
-  display: block;
+  display: flex;
   width: 48px;
   height: 48px;
   padding: 15px 14px;
@@ -612,16 +612,19 @@ body {
 .table-view-button:before {
   content: url("../images/icons/view-table-icon.svg");
   display: flex;
+  place-items: center;
 }
 
 .slider-view-button:before {
   content: url("../images/icons/view-slider-icon.svg");
   display: flex;
+  place-items: center;
 }
 
 .list-view-button:before {
   content: url("../images/icons/view-list-icon.svg");
   display: flex;
+  place-items: center;
 }
 
 /*hotels cards list*/
