--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,23 +135,25 @@ body {
   display: flex;
   width: 100%;
   padding: 0 70px;
-  position: relative;
 }
 
 .header-link-logo {
   display: block;
-  position: absolute;
+  width: 139px;
+  height: 65px;
+  position: relative;
 }
 
 .header-logo {
   display: block;
+  max-width: fit-content;
 }
 
 .navigation {
   display: flex;
   width: 100%;
   font-weight: 700;
-  padding-left: 186px;
+  margin-left: 47px;
 }
 
 .navigation-list {
@@ -174,7 +176,7 @@ body {
 
 .navigation-link {
   display: block;
-  padding: 20px 0;
+  padding: 20px 0 19px;
   color: inherit;
   text-decoration: none;
   font-size: 20px;
@@ -183,7 +185,7 @@ body {
 
 .navigation-link-current {
   border-bottom: 2px solid #756257;
-  padding-bottom: 18px;
+  padding-bottom: 17px;
 }
 
 .favorite-link, .search-link {
@@ -193,7 +195,7 @@ body {
   position: relative;
   padding: 0;
   min-width: 42px;
-  min-height: 66px;
+  min-height: 65px;
 }
 
 .favorite-count {
@@ -216,7 +218,7 @@ body {
 .navigation-user .button {
   min-width: 160px;
   margin-top: 14px;
-  margin-bottom: 14px;
+  margin-bottom: 13px;
   margin-left: 20px;
 }
 
