--- a/styles/styles.css
+++ b/styles/styles.css
@@ -263,11 +263,13 @@ body {
   margin-bottom: 63px;
 }
 
-.decoration-frame {
+.welcome::after {
+  content: "";
   position: absolute;
   width: 1200px;
   height: 57px;
   bottom: 0;
+  left: 0;
   background-color: #fff;
   clip-path: polygon(0 100%, 0 0, 20% 42%, 20% 0, 50% 100%, 79% 0, 79% 42%, 100% 0, 100% 100%);
 }
@@ -582,7 +584,6 @@ body {
 }
 
 /*catalog*/
-
 .catalog-header {
   width: 100%;
   padding: 35px 70px 70px 70px;
@@ -681,7 +682,6 @@ body {
   padding-left: 40px;
   cursor: pointer;
 }
-
 
 .control-mark {
   position: absolute;
@@ -874,7 +874,7 @@ body {
   z-index: 1;
 }
 
-.catalog-filter-slider {
+.control-price-range {
   width: 100%;
   height: 100%;
   appearance: none;
@@ -882,16 +882,16 @@ body {
   margin: 0;
 }
 
-.slider-max {
+.price-max {
   position: absolute;
 }
 
-.catalog-filter-slider:not(:only-of-type) {
+.control-price-range:not(:only-of-type) {
   pointer-events: none;
   right: 0;
 }
 
-.catalog-filter-slider::-moz-range-thumb {
+.control-price-range::-moz-range-thumb {
   -moz-appearance: none;
   pointer-events: auto;
   border: none;
@@ -901,7 +901,7 @@ body {
   border-radius: 5px;
 }
 
-.catalog-filter-slider::-webkit-slider-thumb {
+.control-price-range::-webkit-slider-thumb {
   appearance: none;
   pointer-events: auto;
   border: none;
@@ -911,38 +911,39 @@ body {
   border-radius: 5px;
 }
 
-.catalog-filter-slider::-moz-range-thumb:hover {
+.control-price-range::-moz-range-thumb:hover {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
 }
 
-.catalog-filter-slider::-webkit-slider-thumb:hover {
+.control-price-range::-webkit-slider-thumb:hover {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
 }
 
-.catalog-filter-slider::-moz-range-thumb:active {
+.control-price-range::-moz-range-thumb:active {
   outline: 2px solid #83B3D3;
   box-shadow: 0 7px 15px rgba(0, 0, 0, 0.4);
 }
 
-.catalog-filter-slider::-webkit-slider-thumb:active {
+.control-price-range::-webkit-slider-thumb:active {
   outline: 2px solid #83B3D3;
   box-shadow: 0 7px 15px rgba(0, 0, 0, 0.4);
 }
 
-.catalog-filter-slider:focus {
+.control-price-range:focus {
   outline: none;
 }
 
-.catalog-filter-slider:focus-visible::-moz-range-thumb {
+.control-price-range:focus::-moz-range-thumb {
   outline: 3px solid #83B3D3;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
 }
 
-.catalog-filter-slider:focus::-webkit-slider-thumb {
+.control-price-range:focus::-webkit-slider-thumb {
   outline: 3px solid #83B3D3;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
 }
 
+/*apply-reset buttons*/
 .form-buttons-container {
   display: flex;
   flex-direction: column;
@@ -1057,7 +1058,6 @@ body {
   outline: none;
   border: 2px solid #68A2CA;
 }
-
 
 .view-current {
   border: 2px solid #000;
