--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,6 +59,7 @@ body {
   margin: 0 auto;
   background-color: #fff;
   min-height: 100%;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .button {
@@ -1187,4 +1188,239 @@ body {
   background-image: none;
   background-color: inherit;
   color: #000;
+}
+
+/*modal*/
+.modal-wrapper {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(242, 242, 242, 0.8);
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.modal-open {
+  display: flex;
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  width: 715px;
+  padding: 62px 70px 70px;
+  background-color: #fff;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 30px;
+}
+
+.modal-title {
+  margin: 0 0 63px 0;
+  padding: 0;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+.modal-close-button {
+  position: absolute;
+  width: 53px;
+  height: 53px;
+  padding: 20px;
+  top: 54px;
+  right: 70px;
+  border-radius: 50%;
+  background-color: #F2F2F2;
+  border: none;
+  cursor: pointer;
+}
+
+.modal-close-button:hover,
+.modal-close-button:active {
+  background-color: #E6E6E6;
+}
+.modal-close-button:active svg {
+  opacity: 0.3;
+}
+
+.modal-close-button:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.modal-close-button svg {
+  fill: #000;
+}
+
+.modal-form {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.modal-form-label {
+  position: relative;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+}
+
+.date-label {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.date-label::after {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background-image: url("../images/icons/calendar-icon.svg");
+  background-repeat: no-repeat;
+  top: 18px;
+  right: 19px;
+  opacity: 0.3;
+}
+
+.adults-label {
+  margin-right: 64px;
+}
+
+.modal-form-input {
+  position: relative;
+  width: 420px;
+  height: 50px;
+  margin-left: auto;
+  background-color: #F2F2F2;
+  border-radius: 4px;
+  border: none;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  padding-left: 19px;
+  color: #000;
+}
+
+.modal-form-input:hover {
+  background-color: #E6E6E6;
+}
+
+.modal-form-input:focus:not(:placeholder-shown) {
+  outline: none;
+  background-color: #fff;
+  border: 2px solid #000000;
+}
+
+.modal-form-input:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.date-input-success {
+  display: block;
+  position: relative;
+  left: 155px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.date-input-error {
+  display: block;
+  position: relative;
+  left: 155px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: #FF5757;
+}
+
+.modal-form-quantity-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 133px;
+  padding: 13px 13px 12px 13px;
+  background-color: #F2F2F2;
+  border-radius: 4px;
+}
+
+.adults-wrapper {
+  margin-right: 56px;
+}
+
+.quantity-input {
+  -moz-appearance: textfield;
+  flex-grow: 1;
+  min-width: 20px;
+  text-align: center;
+  background-color: transparent;
+  border: none;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.quantity-input:focus {
+  outline: 3px solid #83B3D3;
+}
+
+/*remove default arrows*/
+.quantity-input::-webkit-outer-spin-button,
+.quantity-input::-webkit-inner-spin-button {
+  appearance: none;
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.quantity-button {
+  display: flex;
+  align-items: center;
+  padding: 0 6px;
+  background-color: transparent;
+  width: 25px;
+  height: 25px;
+  border: none;
+  cursor: pointer;
+}
+
+.quantity-button svg {
+  opacity: 0.3;
+}
+
+.quantity-button:hover svg {
+  opacity: 1;
+}
+
+.quantity-button:active svg {
+  opacity: 0.2;
+}
+
+.quantity-button:focus  {
+  opacity: 1;
+  outline: none;
+  border: 3px solid #83B3D3;
+  padding: 0 3px;
+  border-radius: 4px;
+}
+
+.button-tooltip {
+  width: 25px;
+  height: 25px;
+  margin: 0 18px 0 6px;
+  border-radius: 50%;
+  background-color: #83B3D3;
+  border: none;
+}
+
+.button-modal-submit {
+  flex-grow: 1;
+  margin-top: 40px;
+  font-size: 20px;
+  line-height: 36px;
+  padding: 12px 0;
 }
