--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,7 +66,7 @@ body {
   display: block;
   min-width: 60px;
   max-width: 574px;
-  padding: 9px 0;
+  padding: 9px 0 8px;
   font-family: inherit;
   font-size: 16px;
   line-height: 20px;
@@ -683,7 +683,7 @@ body {
 }
 
 .catalog-filter-item:not(:last-child) {
-  margin-bottom: 16px;
+  margin-bottom: 15px;
 }
 
 .control {
@@ -772,7 +772,7 @@ body {
 
 .catalog-filter-group-infrastructure {
   width: 151px;
-  margin: 0 70px 0 0;
+  margin: 0 67px 0 0;
 }
 
 .catalog-filter-group-type {
@@ -876,7 +876,7 @@ body {
   position: relative;
   width: 288px;
   height: 20px;
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.3) 0, #fff 0, #fff 75%, rgba(255, 255, 255, 0.3) 75%);
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.3) 0, #fff 0, #fff 81%, rgba(255, 255, 255, 0.3) 81%);
   background-size: 100% 4px;
   background-repeat: no-repeat;
   background-position: center;
@@ -962,8 +962,7 @@ body {
 .button-apply-filters {
   background-color: #82B3D3;
   min-width: 160px;
-  min-height: 48px;
-  padding: 0;
+  padding: 14px 0;
 }
 
 .button-reset-filters {
@@ -972,7 +971,7 @@ body {
   text-transform: capitalize;
   font-weight: 400;
   padding: 0;
-  margin: 20px auto 0 auto;
+  margin: 21px auto 0 auto;
 }
 
 .button-reset-filters:hover {
@@ -1012,7 +1011,7 @@ body {
   background-color: transparent;
   background-image: url("../images/icons/select-arrow-icon.svg");
   background-repeat: no-repeat;
-  background-position: center right 20px;
+  background-position: center right 18px;
 }
 
 .catalog-select:hover {
@@ -1091,7 +1090,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 140px);
   column-gap: 20px;
-  row-gap: 16px;
+  row-gap: 15px;
 }
 
 .hotel-image-link {
@@ -1134,7 +1133,7 @@ body {
   line-height: 20px;
   font-weight: 400;
   text-transform: uppercase;
-  padding: 9px 22px;
+  padding: 9px 22px 8px;
   background-color: #F2F2F2;
   border-radius: 4px;
 }
@@ -1148,7 +1147,7 @@ body {
 /*pagination*/
 .catalog-pages-controls {
   display: flex;
-  margin: 0 72px;
+  margin: 0 72px 25px;
   justify-content: space-between;
 }
 
@@ -1158,10 +1157,6 @@ body {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-}
-
-.catalog-pagination-item {
-  margin-bottom: 8px;
 }
 
 .catalog-pagination-item:not(:last-child) {
