--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,7 @@ body {
   font-size: 18px;
   line-height: 21px;
   background-color: #E5E5E5;
-  color:#000;
+  color:#000000;
   height: 100%;
   counter-reset: advantage-count;
 }
@@ -57,7 +57,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  background-color: #fff;
+  background-color: #ffffff;
   min-height: 100%;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
@@ -216,7 +216,7 @@ body {
 }
 
 .navigation-link svg {
-  fill: #000;
+  fill: #000000;
 }
 
 .navigation-link:hover svg,
@@ -237,12 +237,12 @@ body {
   line-height: 13px;
   font-weight: 400;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
   padding-top: 3px;
 }
 
 .navigation-user .button {
-  min-width: 160px;
+  width: 160px;
   margin-top: 14px;
   margin-bottom: 13px;
   margin-left: 20px;
@@ -273,7 +273,7 @@ body {
   height: 57px;
   bottom: -1px;
   left: 0;
-  background-color: #fff;
+  background-color: #ffffff;
   clip-path: polygon(0 100%, 0 0, 20.87% 42%, 20.87% 0, 50% 100%, 79.2% 0, 79.2% 42%, 100% 0, 101% 100%);
 }
 
@@ -308,7 +308,7 @@ body {
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  background-color: #fff;
+  background-color: #ffffff;
   list-style: none;
 }
 
@@ -504,6 +504,7 @@ body {
 
  .button-subscribe {
    min-width: 200px;
+   max-width: 300px;
    padding: 12px 0;
    font-size: 20px;
    line-height: 36px;
@@ -562,7 +563,7 @@ body {
   display: block;
   padding: 5px 0;
   text-decoration: none;
-  color: #000;
+  color: #000000;
 }
 
 .phone-number-link:hover,
@@ -580,7 +581,7 @@ body {
 }
 
 .footer-html-academy-link svg {
-  fill: #000;
+  fill: #000000;
 }
 
 .footer-html-academy-link:hover svg,
@@ -601,7 +602,7 @@ body {
   background-repeat: no-repeat;
   background-color: #396487;
   background-size: cover;
-  color: #fff;
+  color: #ffffff;
 }
 
 .catalog-title {
@@ -643,7 +644,7 @@ body {
 }
 
 .breadcrumbs-link:focus {
-  color: #fff;
+  color: #ffffff;
 }
 
 .breadcrumbs-link:active {
@@ -656,7 +657,7 @@ body {
 }
 
 .breadcrumbs-link svg {
-  fill: #fff;
+  fill: #ffffff;
 }
 
 .breadcrumbs-link:hover svg {
@@ -664,7 +665,7 @@ body {
 }
 
 .breadcrumbs-link:focus svg {
-  fill: #fff;
+  fill: #ffffff;
 }
 
 .breadcrumbs-link:active svg {
@@ -697,7 +698,7 @@ body {
   left: 0;
   width: 20px;
   height: 20px;
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 4px;
 }
 
@@ -876,7 +877,7 @@ body {
   position: relative;
   width: 288px;
   height: 20px;
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.3) 0, #fff 0, #fff 81%, rgba(255, 255, 255, 0.3) 81%);
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.3) 0, #ffffff 0, #ffffff 81%, rgba(255, 255, 255, 0.3) 81%);
   background-size: 100% 4px;
   background-repeat: no-repeat;
   background-position: center;
@@ -906,7 +907,7 @@ body {
   border: none;
   width: 20px;
   height: 20px;
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 5px;
 }
 
@@ -916,7 +917,7 @@ body {
   border: none;
   width: 20px;
   height: 20px;
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 5px;
 }
 
@@ -962,6 +963,7 @@ body {
 .button-apply-filters {
   background-color: #82B3D3;
   min-width: 160px;
+  max-width: 200px;
   padding: 14px 0;
 }
 
@@ -1055,11 +1057,11 @@ body {
 }
 
 .button-view:hover {
-  border: 2px solid #000;
+  border: 2px solid #000000;
 }
 
 .button-view:active {
-  border: 2px solid #000;
+  border: 2px solid #000000;
 }
 
 .button-view:focus {
@@ -1068,7 +1070,7 @@ body {
 }
 
 .view-current {
-  border: 2px solid #000;
+  border: 2px solid #000000;
 }
 
 /*hotels cards list*/
@@ -1104,7 +1106,7 @@ body {
   display: block;
   padding: 0;
   text-decoration: 0;
-  color: #000;
+  color: #000000;
   grid-column: 1 / -1;
 }
 
@@ -1172,7 +1174,7 @@ body {
 
 .current-page {
   background-color: #F2F2F2;
-  color: #000;
+  color: #000000;
 }
 
 /*amount-controls*/
@@ -1190,7 +1192,7 @@ body {
   text-align: center;
   background-image: none;
   background-color: inherit;
-  color: #000;
+  color: #000000;
 }
 
 /*modal*/
@@ -1214,7 +1216,7 @@ body {
   margin: auto;
   width: 715px;
   padding: 62px 70px 70px;
-  background-color: #fff;
+  background-color: #ffffff;
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
   border-radius: 30px;
 }
@@ -1255,7 +1257,7 @@ body {
 }
 
 .modal-close-button svg {
-  fill: #000;
+  fill: #000000;
 }
 
 .modal-form {
@@ -1307,7 +1309,7 @@ body {
   font-size: 18px;
   line-height: 21px;
   padding-left: 19px;
-  color: #000;
+  color: #000000;
 }
 
 .modal-form-input:hover {
@@ -1316,7 +1318,7 @@ body {
 
 .modal-form-input:focus:not(:placeholder-shown) {
   outline: none;
-  background-color: #fff;
+  background-color: #ffffff;
   border: 2px solid #000000;
 }
 
@@ -1447,7 +1449,7 @@ body {
   width: 256px;
   padding: 15px 18px 23px 22px;
   background-color: #333333;
-  color: #fff;
+  color: #ffffff;
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
